--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@playwright/test",
   "version": "1.0.0",
-  "author": "Karan Shah",
+  "author": "Aditya Gholkar",
   "engines": {
     "node": ">=12.7.0"
   },
